# pulsar

./: .djlint.toml  .editorconfig  .env  .gitignore  Cargo.toml  README.md  compose.yml  mise.toml
.plans/: nats-session-auth.md
.plans/basic-pages-login-flow/: 01-backend.md  02-templates.md  03-css.md  04-tests-and-verification.md  README.md
.sqlx/: query-3082b21dfad8e06f3edd3ff823deeedbd9a8d457a15f8b223dbfcaa4772fee1d.json  query-dcdbbc57e6f630d0236d212180a81d6c0dd0e7c5bd96bab0bd151704347b977d.json
apps/server/: Cargo.toml  sqlx.toml
apps/server/src/: auth.rs  config.rs  dashboard.rs  error.rs  home.rs  lib.rs  main.rs  page.rs  response.rs  router.rs  users.rs
apps/server/templates/: base.html  greet.html  hello.html  user_detail.html  user_list.html
apps/server/templates/auth/: base.html  login.html
apps/server/templates/layouts/: auth.html  base.html  dashboard.html  landing.html
apps/server/templates/pages/: index.html
apps/server/templates/pages/auth/: login.html
apps/server/templates/pages/dashboard/: index.html
apps/server/templates/pages/dashboard/users/: index.html  view.html
apps/server/tests/: migrations.rs  users_http.rs
assets/: main.css
migrations/: 20260716150902_create_users_table.sql  20260721171444_users.up.sql
