[workspace]
resolver = "3"
members = ["apps/server"]

[workspace.dependencies]
askama = { version = "0.16.0", default-features = false, features = [
  "std",
  "derive",
] }
axum = { version = "0.8.9", features = ["http2", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "any", "postgres"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = [
  "request-id",
  "timeout",
  "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
http-body-util = "0.1.3"
