[workspace]
resolver = "3"
members = ["apps/server"]

[workspace.dependencies]
anyhow = "1.0.103"
askama = { version = "0.16.0", default-features = false, features = [
  "std",
  "derive",
] }
axum = { version = "0.8.9", features = ["http2", "tracing"] }
datastar = { version = "0.3.1", features = ["axum", "http2", "tracing"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "any",
  "postgres",
  "uuid",
  "sqlx-toml",
] }
tokio = { version = "1.52.3", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
tokio-stream = "0.1.19"
tower = { version = "0.5.3", features = ["make", "util"] }
tower-http = { version = "0.7.0", features = [
  "fs",
  "normalize-path",
  "request-id",
  "timeout",
  "trace",
] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["fast-rng", "v7", "serde"] }
